# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "server",
-        "title": "Manu Swagger API",
+        "title": "Manu-Lesson Swagger API",
         "contact": {},
         "version": "1.0"
     },
@@ -22,10 +22,50 @@
                     "quiz"
                 ],
                 "summary": "List all quizzes",
-                "operationId": "list-quizzes",
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "put": {
+                "description": "Update the existing quiz",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "quiz"
+                ],
+                "summary": "Update the quiz",
+                "parameters": [
+                    {
+                        "description": "Answer and Question is optional",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.QuizQuestion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -41,11 +81,10 @@
                     "quiz"
                 ],
                 "summary": "Create a new quiz",
-                "operationId": "create-quiz",
                 "parameters": [
                     {
                         "description": "Create quiz",
-                        "name": "quiz",
+                        "name": "req",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -56,6 +95,12 @@
                 "responses": {
                     "201": {
                         "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -73,7 +118,6 @@
                     "quiz"
                 ],
                 "summary": "Get a quiz by ID",
-                "operationId": "get-quiz-by-id",
                 "parameters": [
                     {
                         "type": "integer",
@@ -86,6 +130,9 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
@@ -130,6 +177,13 @@
                         "type": "string",
                         "description": "Unique key for the video",
                         "name": "key",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Handsign contain in the video",
+                        "name": "handsign",
                         "in": "formData",
                         "required": true
                     }
@@ -186,6 +240,23 @@
             "properties": {
                 "answer": {
                     "type": "string"
+                },
+                "question": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.QuizQuestion": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "question": {
                     "type": "string"
